# GamesEngAlfie

./: CMakeLists.txt
2_invaders/: Game.cpp  Game.h  Invader.cpp  Invader.h  Ship.cpp  Ship.h  bullet.cpp  bullet.h  main.cpp
3_tiles/: Entity.cpp  Entity.h  Game.h  Player.cpp  Player.h  main.cpp
Pacman/: Entity.cpp  Entity.h  Game.h  Ghost.cpp  Ghost.h  Main.cpp  Pacman.cpp  Pacman.h  Player.cpp  Player.h  Scene.cpp  Scene.h
practical_1/: main.cpp
